--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,103 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>com.fabiale</groupId>
-  <artifactId>german-gender</artifactId>
-  <packaging>war</packaging>
-  <version>1.0-SNAPSHOT</version>
-  <name>german-gender Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>german-gender</finalName>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>com.fabiale</groupId>
+	<artifactId>german-gender</artifactId>
+	<packaging>war</packaging>
+	<version>1.0-SNAPSHOT</version>
+	<name>german-gender Maven Webapp</name>
+	<url>http://maven.apache.org</url>
+	<properties>
+		<spring.version>3.1.3.RELEASE</spring.version>
+		<jetty.version>8.1.7.v20120910</jetty.version>
+	</properties>
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>3.8.1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+		</dependency>
+		<!-- spring -->
+	 	<dependency>
+	   		<groupId>org.springframework</groupId>
+	   		<artifactId>spring-context-support</artifactId>
+	   		<version>${spring.version}</version>
+	 	</dependency>
+	 	<dependency>
+	   		<groupId>org.springframework</groupId>
+	   		<artifactId>spring-orm</artifactId>
+	   		<version>${spring.version}</version>
+	 	</dependency>
+	 	<dependency>
+	   		<groupId>org.springframework</groupId>
+	   		<artifactId>spring-web</artifactId>
+	   		<version>${spring.version}</version>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>org.springframework</groupId>
+	 		<artifactId>spring-webmvc</artifactId>
+	 		<version>${spring.version}</version>
+	 	</dependency>
+	 	<dependency>
+	   		<groupId>org.springframework</groupId>
+	   		<artifactId>spring-test</artifactId>
+	   		<version>${spring.version}</version>
+	   		<scope>test</scope>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>org.hibernate.java-persistence</groupId>
+	 		<artifactId>jpa-api</artifactId>
+	 		<version>2.0-cr-1</version>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>org.hibernate</groupId>
+	 		<artifactId>hibernate-entitymanager</artifactId>
+	 		<version>4.1.8.Final</version>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>cglib</groupId>
+	 		<artifactId>cglib</artifactId>
+	 		<version>2.2.2</version>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>mysql</groupId>
+	 		<artifactId>mysql-connector-java</artifactId>
+	 		<version>5.1.21</version>
+	 	</dependency>
+	</dependencies>
+	<build>
+		<finalName>german-gender</finalName>
+		<plugins>
+	      <plugin>
+	        <groupId>org.mortbay.jetty</groupId>
+			<artifactId>jetty-maven-plugin</artifactId>
+			<version>${jetty.version}</version>
+			<configuration>
+			  <webApp>
+			    <contextPath>/</contextPath>
+			  </webApp>
+			</configuration>
+			<dependencies>
+				  <dependency>
+				    <groupId>org.eclipse.jetty</groupId>
+				    <artifactId>jetty-servlets</artifactId>
+				    <version>${jetty.version}</version>
+				  </dependency>
+			</dependencies>
+	      </plugin>
+	      <plugin>
+	        <artifactId>maven-war-plugin</artifactId>
+			<version>2.3</version>
+			<configuration>
+			  <failOnMissingWebXml>false</failOnMissingWebXml>
+			</configuration>
+	      </plugin>
+	    </plugins>
+	</build>
 </project>
