--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,16 @@
 	 		<artifactId>gson</artifactId>
 	 		<version>2.2.2</version>
 	 	</dependency>
+	 	<dependency>
+	 		<groupId>javax.servlet</groupId>
+	 		<artifactId>jstl</artifactId>
+	 		<version>1.2</version>
+	 	</dependency>
+	 	<dependency>
+	 		<groupId>javax.el</groupId>
+	 		<artifactId>javax.el-api</artifactId>
+	 		<version>2.2.4</version>
+	 	</dependency>
 	</dependencies>
 	<build>
 		<finalName>german-gender</finalName>
